--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [database]
-hostname = mariadb
-username = devops
-password = devops#2018
+hostname = maria-demo
+username = devopss
+password = devops#2020
 dbname = mariadb
 
 [environment]
