--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [database]
-hostname = maria-demo
-username = devopss
-password = devops#2020
-dbname = mariadb
+hostname = mariadb
+username = devops
+password = devops#2018
+dbname = devopsdemo
 
 [environment]
 environment = DEV
